# mmv

./: .config.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: helpers.rs  lib.rs  main.rs  move.rs
tests/: tests.rs
