[package]
name = "mmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap  =  { version = "4.4.6", features = ["derive"] }
regex = { version = "1.10.1" }
tempdir = { version = "0.3" }
thiserror = "1.0"

[[bin]]
name = "mmv"
path = "src/main.rs"

[lib]
name = "mmv"
path = "src/lib.rs"